# cartesian_array_product

./: Cargo.toml  README.md
src/: cartesian.rs  lib.rs  test.rs
