[package]
name = "cartesian_array_product"
description = "Arrays of the cartesian product of a set of items."
license = "MIT"
documentation = "https://docs.rs/cartesian_array_product"
readme = "README.md"
repository = "https://github.com/Odilf/cartesian_array_product"

keywords = ["cartesian", "array", "const", "macro"]

version = "1.0.2"
edition = "2021"

[dependencies]
const-anonymous-functions = "^1.0.0"
